--- a/web/index.html
+++ b/web/index.html
@@ -2,17 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="Sport Diary Flutter App">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Sport Diary</title>
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <script>
-      var serviceWorkerVersion = null;
-      var scriptTag = document.createElement('script');
-      scriptTag.src = 'flutter.js';
-      scriptTag.defer = true;
-      document.body.append(scriptTag);
+      // Загружаем bootstrap-файл Flutter
+      window.addEventListener('load', function(ev) {
+        var scriptTag = document.createElement('script');
+        scriptTag.src = 'flutter_bootstrap.js';
+        scriptTag.defer = true;
+        document.body.appendChild(scriptTag);
+      });
     </script>
   </body>
 </html>
