--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <!-- PWA and App Icons -->
+<link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="icons/Icon-192.png">
+<link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
+<meta name="theme-color" content="#002b5c">
+<meta name="background-color" content="#ffffff">
+<!-- App info -->
+<meta name="application-name" content="Sport Diary">
+<meta name="description" content="Sport Diary — спортивный дневник для триатлета: бег, плавание, вело, лыжи. Аналитика и синхронизация со Strava.">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
