--- a/web/index.html
+++ b/web/index.html
@@ -37,15 +37,21 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-<!-- PWA and App Icons -->
+<!-- PWA / Icons: START -->
 <link rel="manifest" href="manifest.json">
 
-<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="icons/Icon-192.png">
-<link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
-<meta name="theme-color" content="#002b5c">
-<meta name="background-color" content="#ffffff">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+<meta name="theme-color" content="#0A2E5D">
+<meta name="background-color" content="#0A2E5D">
+<meta name="application-name" content="Sport Diary">
+<meta name="apple-mobile-web-app-title" content="Sport Diary">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<!-- PWA / Icons: END -->
 <!-- App description and name -->
 <meta name="application-name" content="Sport Diary">
 <meta name="description" content="Sport Diary — спортивный дневник для триатлета: бег, плавание, вело, лыжи. Аналитика и синхронизация со Strava.">
