--- a/web/index.html
+++ b/web/index.html
@@ -1,75 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <!-- PWA and App Icons -->
-<link rel="manifest" href="manifest.json">
-<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="icons/Icon-192.png">
-<link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
-<meta name="theme-color" content="#002b5c">
-<meta name="background-color" content="#ffffff">
-<!-- App info -->
-<meta name="application-name" content="Sport Diary">
-<meta name="description" content="Sport Diary — спортивный дневник для триатлета: бег, плавание, вело, лыжи. Аналитика и синхронизация со Strava.">
-<!-- PWA + App Icons -->
-<link rel="manifest" href="manifest.json">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!-- PWA + App Icons -->
+  <link rel="manifest" href="manifest.json">
 
-<meta name="theme-color" content="#0A2E5D">
-<meta name="background-color" content="#0A2E5D">
-<meta name="application-name" content="Sport Diary">
-<meta name="apple-mobile-web-app-title" content="Sport Diary">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-<meta name="description" content="Спортивный дневник для триатлета. Аналитика, тренировки, интеграция со Strava.">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sport Diary</title>
-<!-- End PWA + App Icons -->
-<!-- App info -->
-<meta name="application-name" content="Sport Diary">
-<meta name="description" content="Sport Diary — спортивный дневник для триатлета: бег, плавание, вело, лыжи. Аналитика и синхронизация со Strava.">
-  <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <base href="/" />
+  <meta name="theme-color" content="#0A2E5D">
+  <meta name="background-color" content="#0A2E5D">
+  <meta name="application-name" content="Sport Diary">
+  <meta name="apple-mobile-web-app-title" content="Sport Diary">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+  <meta name="description" content="Sport Diary — спортивный дневник для триатлета. Аналитика, тренировки, интеграция со Strava.">
   <title>Sport Diary</title>
-  <meta name="description" content="Sport Diary — ваш тренировочный дневник" />
+  <!-- End PWA + App Icons -->
 
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="manifest" href="/manifest.json" />
+  <!-- Flutter Web App -->
+  <base href="/">
+  <script>
+    // Flutter web service worker versioning
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1.0.1');
+      });
+    }
+  </script>
 
-  <!-- Инструкции для кэширования HTML: всегда проверять обновления -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-<!-- PWA / Icons: START -->
-<link rel="manifest" href="manifest.json">
-
-<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-<meta name="theme-color" content="#0A2E5D">
-<meta name="background-color" content="#0A2E5D">
-<meta name="application-name" content="Sport Diary">
-<meta name="apple-mobile-web-app-title" content="Sport Diary">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!-- PWA / Icons: END -->
-<!-- App description and name -->
-<meta name="application-name" content="Sport Diary">
-<meta name="description" content="Sport Diary — спортивный дневник для триатлета: бег, плавание, вело, лыжи. Аналитика и синхронизация со Strava.">
+  <!-- Prevent caching of index.html -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
 </head>
+
 <body>
-  <!-- Загрузчик Flutter + регистрация SW -->
-  <script defer src="/flutter.js"></script>
-  <!-- Flutter сам подгрузит /main.dart.js через bootstrap -->
-  <noscript>Для работы приложения нужен JavaScript.</noscript>
+  <noscript>Пожалуйста, включите JavaScript для запуска приложения Sport Diary.</noscript>
+
+  <!-- Flutter bootstrap script -->
+  <script src="flutter.js" defer></script>
+  <script>
+    window.addEventListener('load', async function () {
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: '1.0.1',
+        },
+        onEntrypointLoaded: async function (engineInitializer) {
+          let appRunner = await engineInitializer.initializeEngine();
+          await appRunner.runApp();
+        }
+      });
+    });
+  </script>
 </body>
 </html>
